# serializer version: 1
# name: TestCannonballGenerator.test_generate
  tuple(
    list([
      '/usr/bin/cannonball',
      '-cfgfile',
      '/userdata/system/configs/cannonball/config.xml',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
      'XDG_DATA_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestCannonballGenerator.test_generate[config]
  '''
  <?xml version="1.0" encoding="utf-8"?>
  <data>
      <rompath>/userdata/roms/cannonball/</rompath>
      <respath>/userdata/system/configs/cannonball/</respath>
      <savepath>/userdata/saves/cannonball/</savepath>
      <crc32>0</crc32>
  </data>
  <video>
      <mode>1</mode>
      <window>
          <scale>2</scale>
      </window>
      <fps_counter>0</fps_counter>
      <widescreen>0</widescreen>
      <hires>0</hires>
      <vsync>1</vsync>
      <scanlines>0</scanlines>
      <fps>2</fps>
  </video>
  <sound>
      <enable>1</enable>
      <fix_samples>0</fix_samples>
  </sound>
  <controls />
  '''
# ---
# name: TestCannonballGenerator.test_generate[gamecontrollerdb]
  '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,'
# ---
# name: TestCannonballGenerator.test_generate_non_default_options
  tuple(
    list([
      '/usr/bin/cannonball',
      '-cfgfile',
      '/userdata/system/configs/cannonball/config.xml',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
      'XDG_DATA_HOME': '/userdata/system/configs',
    }),
  )
# ---
# name: TestCannonballGenerator.test_generate_non_default_options[config]
  '''
  <?xml version="1.0" encoding="utf-8"?>
  <data>
      <rompath>/userdata/roms/cannonball/</rompath>
      <respath>/userdata/system/configs/cannonball/</respath>
      <savepath>/userdata/saves/cannonball/</savepath>
      <crc32>0</crc32>
  </data>
  <video>
      <mode>1</mode>
      <window>
          <scale>2</scale>
      </window>
      <fps_counter>1</fps_counter>
      <widescreen>1</widescreen>
      <hires>1</hires>
      <vsync>1</vsync>
      <scanlines>0</scanlines>
      <fps>2</fps>
  </video>
  <sound>
      <enable>1</enable>
      <fix_samples>0</fix_samples>
  </sound>
  <controls />
  '''
# ---
# name: TestCannonballGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
    }),
    'name': 'cannonball',
  })
# ---
